--- a/src/br/com/lucas/representante/view/fxml/FXMLClientManager.fxml
+++ b/src/br/com/lucas/representante/view/fxml/FXMLClientManager.fxml
@@ -38,17 +38,17 @@
             <TableView fx:id="tableClientes" onMouseClicked="#editClient" prefHeight="438.0" prefWidth="752.0" AnchorPane.bottomAnchor="77.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="10.0">
               <columns>
                 <TableColumn fx:id="cNome" editable="false" prefWidth="270" text="Nome" />
-                <TableColumn fx:id="cFantasia" editable="false" prefWidth="220" text="Nome Fantasia" />
+                <TableColumn fx:id="cFantasia" editable="false" prefWidth="200" text="Nome Fantasia" />
                 <TableColumn fx:id="cID" editable="false" prefWidth="90" text="ID Comp." />
                 <TableColumn fx:id="cCidade" editable="false" prefWidth="140" text="Cidade" />
                 <TableColumn fx:id="cCnjpCpf" editable="false" prefWidth="150" text="CPNJ/CPF" />
                 <TableColumn fx:id="cTelefone1" editable="false" prefWidth="120" text="Telefone" />
                 <TableColumn fx:id="cTelefone2" editable="false" prefWidth="120" text="Telefone" />
-                <TableColumn fx:id="cTipo" editable="false" prefWidth="135" text="Tipo" />
+                <TableColumn fx:id="cTipo" editable="false" prefWidth="130" text="Tipo" />
               </columns>
                <tooltip><Tooltip text="Duplo clique para editar um cliente" /></tooltip>
             </TableView>
-            <Button fx:id="btnExportar" layoutX="554.0" layoutY="464.0" mnemonicParsing="false" onAction="#exportData" prefHeight="40.0" prefWidth="100.0" text="Exportar" AnchorPane.bottomAnchor="21.0" AnchorPane.rightAnchor="138.0">
+            <Button fx:id="btnExportar" layoutX="554.0" layoutY="464.0" mnemonicParsing="false" onAction="#exportData" prefHeight="40.0" prefWidth="100.0" text="Exportar" visible="false" AnchorPane.bottomAnchor="21.0" AnchorPane.rightAnchor="138.0">
                <font>
                   <Font size="15.0" />
                </font></Button>
